<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:android="http://schemas.android.com/apk/res/android">

    <string name="app_name">blunter</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_section1">INBOX</string>
    <string name="title_section2">FRIENDS</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="login_button_label">Login</string>
    <string name="sign_up_text">Sign Up!</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="email_hint">Email</string>
    <string name="sign_up_button_label">Sign Up!</string>
    <string name="signup_error_message">Please enter username, password and email!</string>
    <string name="signup_error_title">OOPS!</string>
    <string name="login_error_message">Please enter username and password!</string>
    <string name="login_error_title">OOPS!</string>
    <string name="menu_logout_label">Logout</string>
    <string name="empty_inbox_label">No new messages!</string>
    <string name="empty_friends_label">Add friends to begin!</string>
    <string name="menu_edit_friends_label">Edit Friends</string>
    <string name="title_activity_edit_friends">Edit Friends</string>
    <string name="error_title">We\'re sorry!</string>
    <string name="menu_camera_label">Camera</string>

    <string-array name="camera_choices">
        <item>Take Picture</item>
        <item>Take Video</item>
        <item>Choose Picture</item>
        <item>Choose Video</item>
    </string-array>

    <string name="error_external_storage">There was a problem accessing your device\'s external storage.</string>
    <string name="general_error">Sorry, there was an error!</string>
    <string name="video_size_limit_warning">The selected video must be less than 10 MB.</string>
    <string name="video_file_size_warning">The selected video must be less than 10mb.</string>
    <string name="error_opening_file">there was a problem with selected file.</string>
    <string name="error_file_size_too_large">the selected file is too large! Select a new one.</string>
    <string name="title_activity_recipients">Choose Recipients</string>
    <string name="empty_recipients_list_message">Choose some friends first</string>
    <string name="action_send_label">send</string>
    <string name="menu_send_label">send</string>
    <string name="error_selecting_file">there was an error with the file selected. Please select a different file.</string>
    <string name="error_selecting_file_title">We\'re sorry!</string>
    <string name="error_sending_message">There was an error sending your messsage. Please try again!</string>
    <string name="title_activity_view_image">blunter</string>

</resources>
