<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.blunter.SignUpActivity"
    tools:ignore="MergeRootFrame" >
    <EditText android:id="@+id/usernameField" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_alignParentLeft="true" android:layout_alignParentTop="true" android:layout_marginTop="23dp" android:ems="10" android:hint="@string/username_hint">
        <requestFocus />
    </EditText>
    <EditText android:id="@+id/passwordField" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_alignParentLeft="true" android:layout_below="@+id/usernameField" android:ems="10" android:hint="@string/password_hint" android:inputType="textPassword"/>
    <EditText android:id="@+id/emailField" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_alignParentLeft="true" android:layout_below="@+id/passwordField" android:ems="10" android:hint="@string/email_hint" android:inputType="textEmailAddress"/>
    <Button android:id="@+id/signupbutton" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_alignParentLeft="true" android:layout_below="@+id/emailField" android:text="@string/sign_up_button_label"/>
</RelativeLayout>

